# rbcn26-platynui-workshop

./: .gitignore  INSTALL_GUIDE_LINUX.md  INSTALL_GUIDE_WINDOWS.md  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
docs/: ARM_WINDOWS_GUIDE.md  JSONRPC_REMOTE.md  LINUX_GUIDE.md  WINDOWS_GUIDE.md
docs/exercises/3_xpath-functions/: 1_exercises.md
docs/install/: ARM_WINDOWS_GUIDE.md  DEVCONTAINER_GUIDE.md
docs/keywords/: cheat_sheet.md
exercises/1_calculator/solution/: calculator.robot
exercises/1_platynui-test-sut/: controls_page.robot  platynui_test_sut.resource
exercises/2_platynui-test-sut/: 2_mouse_page.robot  3_about_page.robot  controls_page.robot  platynui-test-sut_exercises.md  platynui_test_sut.resource
exercises/2_platynui-test-sut/solution/: 1_controls_page.robot
exercises/2_xpath-functions/: 0_overview.md  2_starts-with.md  3_normalize-space.md  5_translate.md  6_position.md
exercises/calculator/: calculator.md  calculator.robot  calculator_broken.robot  calculator_keywords.resource
exercises/different_tools/: different_tools.md
exercises/platynui-test-sut/: controls_page.robot  platynui-test-sut.md  platynui_test_sut.resource  test.resource  test.robot
exercises/xpath-functions/: 0_overview.robot  1_contains.md  1_contains.robot  2_starts-with.md  2_starts-with.robot  3_normalize-space.md  3_normalize-space.robot  4_not.md  4_not.robot  5_translate.md  5_translate.robot  6_position.md  6_position.robot  exercises.txt  exercises_advanced.md  exercises_advanced.txt  solutions.md  solutions.txt  solutions_advanced.txt
exercises/übungsblock_1/: calculator_broken.robot
scripts/: run-robot.sh  start-spy.sh  start-sut.sh
src/platynui_workshop/: __init__.py  platynui_test_sut.resource
sut/src/platynui_sut/: main.py  pyproject.toml
sut/src/platynui_sut/qml/: Theme.qml  main.qml  qmldir
sut/src/platynui_sut/qml/pages/: AboutPage.qml  ControlsPage.qml  ListViewPage.qml  TableViewPage.qml  TextEditPage.qml
tests/: remote.robot
tests/1_calculator/: calculator.robot
tests/2_platynui-test-sut/: 1_controls_page.robot  2_mouse_page.robot  3_about_page.robot
tests/3_xpath-functions/: 0_xpath_cheat_sheet.md  2_solutions_advanced.md
tests/4_variables/: calculator.py  keywords.robot  variables.robot
