[project]
name = "platynui-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fabian Tsirogiannis", email = "fabian.tsirogiannis@imbus.de" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "robotframework>=7.4.1",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
