[project]
name = "platynui-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "robotframework>=7.4.1",
    "robotframework-jsonrpcremote>=0.1.0",
    "robotframework-jsonrpcremote-protocol>=0.1.0",
]

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"
